# polaris-notifications-api

./: .coveragerc  .pre-commit-config.yaml  CODEOWNERS  Dockerfile  README.md  pyproject.toml  run_local.sh  tox.ini
.circleci/: config.yml  run_integration_tests.sh
dhos_notifications_api/: app.py  config.py
dhos_notifications_api/blueprint_api/: __init__.py  email.py  email_controller.py
dhos_notifications_api/blueprint_development/: __init__.py
dhos_notifications_api/helper/: cli.py
dhos_notifications_api/models/: api_spec.py
dhos_notifications_api/openapi/: openapi.yaml
dhos_notifications_api/templates/: mail-body.html
integration-tests/: README.md  docker-compose.yml  environment.py  reporting.py  requirements.txt
integration-tests/clients/: fake_smtp_server_client.py  notifications_client.py  wiremock_client.py
integration-tests/features/: notifications.feature
integration-tests/steps/: notifications_steps.py
tests/: conftest.py  test_api.py  test_openapi.py
tests/test_controllers/: test_email_controller.py
